Implement hybrid data system: treatments_final.xlsx (archive) + treatments_2025.xlsx (new data)

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ backup/
 output/
 data/*.xlsx
 ukr.traineddata
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
+# Upload files
+uploads/
