--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ python-docx==0.8.11
 docxtpl==0.16.7
 openpyxl==3.1.2
 Werkzeug==2.3.7
+pdf2image==1.17.0
+pypdf==4.2.0
+Pillow>=10,<11
+easyocr==1.7.1
+pytesseract==0.3.13
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-dotenv==1.0.0
